@@ -1,6 +1,6 @@
 {
 	"name": "Satisfactorio",
-	"version": "0.6.4",
+	"version": "0.6.5",
 	"title": "Satisfactorio [BETA]",
 	"description": "[font=heading-1]WARNING[/font]\n[font=default-semibold]This is a BETA BUILD.[/font] Although efforts have been made to test thoroughly, there may still be bugs.\n\nAlso, there is no guarantee that save files from one Beta build will work on any other Beta build, so progress may be lost when updating!\n\nThank you for your interest, I look forward to hearing your feedback!\n\n-----\n\nLove Factorio? Love Satisfactory? Want to play both at once? Well all right then! This overhaul mod reworks Factorio to play more like Satisfactory, with belts connecting directly to machines, Milestones, ore nodes and more!",
 	"author": "Niet",
