@@ -250,3 +250,5 @@ Version: 0.6.5
 Date: ????
   Changes:
     - Fixed price of Rifle Ammo in AWESOME shop
+  Bugfixes:
+    - Fixed incorrect icons for resource wells
